--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,17 @@ Type: Package
 Title: Read PDF Pay Stubs from Uber and analyze.
 Version: 0.1.0
 Author: Sam Marshall
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Maintainer: Sam Marshall <yourself@somewhere.net>
+Description: Import PDF pay stubs from Uber saved in landscape mode with A4
+    paper setting. Create income statements and analytics with tools as well.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+Imports: 
+  pdftools,
+  stringr,
+  magrittr,
+  dplyr,
+  plyr,
+  lubridate
+RoxygenNote: 6.0.1
